<resources>
    <string name="app_name">McFresh</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="main_page_selected">%s page is selected</string>
    <string name="title_activity_home">Home</string>
    <string name="about">

    </string>
    <string name="term1">
       Thank you for using McFresh. These Terms of Service (the "Terms") are intended to make you aware of your legal rights and
responsibilities with respect to your access to and use of the McFresh website at www.McFresh.com (the "Site") and any
related mobile or software applications ("McFresh Platform") including but not limited to delivery of information via the
website whether existing now or in the future that link to the Terms (collectively, the "Services").
\n\n\nThese Terms are effective for all existing and future McFresh users, including but without limitation to users having
access to restaurant business page to manage their claimed business listings.
\n\nPlease read these Terms carefully. By accessing or using the McFresh Platform, you are agreeing to these Terms and
concluding a legally binding contract with McFresh Private Limited(Formerly known as McFresh Media Private Limited) and/or
its affiliates or, if you are in the United States, with McFresh USA, LLC and/or its affiliates (hereinafter collectively
referred to as "McFresh"). You may not use the Services if you do not accept the Terms or are unable to be bound by the
Terms. Your use of the McFresh Platform is at your own risk, including the risk that you might be exposed to content that
is objectionable, or otherwise inappropriate.


    </string>
    <string name="term2" >

In order to use the Services, you must first agree to the Terms. You can accept the Terms by:\n\ni)  Clicking to accept or agree to the Terms, where it is made available to you by McFresh in the user interface for any
    particular Service; or\n\nii) Actually using the Services. In this case, you understand and agree that McFresh will treat your use of the Services
    as acceptance of the Terms from that point onwards.\n\nII. Definitions
    </string>
    <string name="term4">
        User\n\n

"User" or "You" or "Your" refers to you, as a user of the Services. A user is someone who accesses or uses the Services
for the purpose of sharing, displaying, hosting, publishing, transacting, or uploading information or views or pictures
and includes other persons jointly participating in using the Services including without limitation a user having access
to restaurant business page to manage claimed business listings or otherwise.
    </string>
    <string name="term5">

"Content" will include (but is not limited to) reviews, images, photos, audio, video, location data, nearby places, and
all other forms of information or data. "Your content" or "User Content" means content that you upload, share or transmit
to, through or in connection with the Services, such as likes, ratings, reviews, images, photos, messages, profile
information, and any other materials that you publicly display or displayed in your account profile. "McFresh Content"
means content that McFresh creates and make available in connection with the Services including, but not limited to, visual
interfaces, interactive features, graphics, design, compilation, computer code, products, software, aggregate ratings,
reports and other usage-related data in connection with activities associated with your account and all other elements and
components of the Services excluding Your Content and Third Party Content. "Third Party Content" means content that comes
from parties other than McFresh or its users and is available on the Services.

    </string>
</resources>