<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.traidev.mcfresh.HomeMenus.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.traidev.mcfresh.HomeMenus.orders.OrdersFrag"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.traidev.mcfresh.HomeMenus.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.traidev.mcfresh.HomeMenus.notify.NotificationFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_notify" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.traidev.mcfresh.HomeMenus.cart.SearchFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/products_activity" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.traidev.mcfresh.HomeMenus.wallet.walletFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_wallet" />
</navigation>